local-websites/overlays/marias-pizzeria/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: marias-pizzeria-svc
  namespace: marias-pizzeria
  annotations:
    networking.gke.io/healthcheck-policy: marias-pizzeria-healthcheck
spec:
  selector:
    app: marias-pizzeria
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
