local-websites/overlays/marias-pizzeria/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: marias-pizzeria-route
  namespace: marias-pizzeria
spec:
  parentRefs:
  - name: external-http-gateway
    namespace: customer1
  hostnames:
  - "marias-pizzeria.siriusdevops.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: marias-pizzeria-svc
      port: 80
